# sample

basic_subject/linker/: .gitignore  c-static.md  linker.md  readme.md  utils.md
basic_subject/linker/ELF/: elf.header.md  elf.section.md  elf.section.relocation.md  elf.section.strtab.md  elf.section.symtab.md  elf.segment.md  ld.link-script.txt  readme.md
basic_subject/linker/helloworld/: main.c  run.sh  sum.c
basic_subject/linker/pic/: foo.c  main.c  readme.md  run.sh
basic_subject/linker/relocation/: more.txt  readme.md
basic_subject/linker/relocation/relocating_sections/: main.S  run.sh  sum-sub.S
basic_subject/linker/relocation/relocation/: foo.c  invoke.h  main.c  run.sh
basic_subject/linker/visibility/: exports.map  func.c  invoke.c  main.c  run.sh
ptrace/: .gitignore  run.sh
ptrace/cmake/modules/: FindDWARF.cmake
ptrace/docs/: DWARF.txt  ptrace.txt  reg.md  signal.txt  wait.txt
ptrace/libdebugger/: CMakeLists.txt  debuglib.cpp  debuglib.h  dwarfutil.cpp  dwarfutil.h
ptrace/traced_sample/: CMakeLists.txt  traced_breakpoint.c  traced_loop.c  traced_printer.asm  traced_printer2.asm  traced_prog2.c
ptrace/tracer/: CMakeLists.txt  dwarf_get_func_addr.cpp  tracer.cpp  tracer_breakpoint.cpp  tracer_inject.cpp
ptrace/tracer_hello/: CMakeLists.txt  simple_tracer.cpp  simple_tracer_attach.cpp  simple_tracer_hello.cpp  simple_tracer_inject.cpp  simple_tracer_regs.cpp  simple_tracer_step.cpp  simple_tracer_syscall.cpp
ptrace/troubleshooting/: CMakeLists.txt
